--- a/index.html
+++ b/index.html
@@ -1,9 +1,36 @@
 <!DOCTYPE html>
-<html>
+<html lang="id">
 <head>
-    <title>Hilal F</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Peta Hilal</title>
+    <link rel="stylesheet" href="https://openlayers.org/en/v4.6.5/css/ol.css" type="text/css">
 </head>
 <body>
+    <div id="map" style="width: 100%; height: 400px;"></div>
+
+	<input type="hidden" id="idmarker" name="idmarker" value="">
+	<div id="popupinfo" class="ol-popup">
+		<b id="popupinfo-title"></b>
+		<div id="popupinfo-content"></div>
+		<div id="popupinfo-delete">
+			<input type="hidden" id="idmarker" name="idmarker" value="">
+			<button id="hapusbutton" type="button">Hapus</button><button id="hitungcogbutton" type="button">Hitung COG</button><br>
+		</div>
+		
+	</div>
+
+	<div id="popup" class="ol-popup">
+		<b id="popup-title">Input Center of Gravity</b><a href="#" id="popup-closer" class="ol-popup-closer"></a>
+		<div id="popup-content"></div>
+		<div id="popup-input">
+			Nama : <input type="text" id="name" name="name" required><br>
+			Volume : <input type="text" id="volume" name="volume" required><br>
+			<input type="hidden" id="long" name="long" value="">
+			<input type="hidden" id="lat" name="lat" value="">
+			<button id="insertmarkerbutton" type="button">Input</button><br>
+		</div>
+	</div>
 
     <div class="gis-table">
         <h1>GIS Point</h1>
@@ -49,6 +76,7 @@
 </div>
 
 
-    <script type="module" src="lal.js"></script>
+<script src="https://openlayers.org/en/v4.6.5/build/ol.js"></script>
+<script src="js/lal.js" type="module"></script>
 </body>
 </html>
