--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="https://openlayers.org/en/v4.6.5/css/ol.css" type="text/css">
 </head>
 <body>
+    <h2>Nama: Hilal Fakhri Dzakwan</h2>
+    <h2>NPM: 1214018</h2>
     <div id="map" style="width: 100%; height: 400px;"></div>
 
 	<input type="hidden" id="idmarker" name="idmarker" value="">
@@ -34,7 +36,6 @@
 
     <div class="gis-table">
         <h1>GIS Point</h1>
-    <h2>-</h2>
     <table id="gisTable" border="1">
         <thead>
             <tr>
